main.css
* {
border:0;
margin:0;
padding:0;
box-sizing: border-box;
}

body {
  font-family: "Open Sans", serif;
  font-size: 12px;
}

/*All stylings for banner*/
.banner {
  /*align-items: center;*/
  background-color: #E5F3F2 ;
  display: flex;
/*  height: 290px;*/
  justify-content: center;
}

.banner-content {
  /*align-self: center;*/
  width: 70%;
}

h1 {
  color: #00A79D ;
  font-family: "Roboto Slab", serif;
  font-size: 500%;
  margin: 3% auto 3% auto;
  text-align: center;
}

.h1-style {
  color: #6D6E71 ;
}

/*form {
  width: 70%;
  margin: auto;
}*/

.idea-title,
.idea-body {
  align-self: center;
  border: solid #D1D3D4 0.5px;
  box-shadow: 0 0 0 .1rem rgba(187,189,191,0.3);
  color: #939598 ;
  font-size: 1.5rem;
  letter-spacing: .05rem;
  margin: 0 0 2% 0%;
  padding: 0.2% 0.5%;
  width: 100%;
}

.search {
  text-align: center;
  width: 100%;
}

.search-bar {
  /*align-self: center;*/
  border: solid #D1D3D4 0.5px;
  box-shadow: 0 0 0 .1rem rgba(187,189,191,0.3);
  color: #939598 ;
  font-size: 1.5rem;
  letter-spacing: .05rem;
  margin: 3% 0 3% 0;
  padding: 0.2% 0.5%;
  width: 70%;
}

input::placeholder {
  color: rgb(187,189,191);
}

.save-button {
  background-color: #00A79D ;
  color: #FFFFFF ;
  /*display: block;*/
  font-size: 1.5rem;
  /*margin-left: 17%;*/
  margin: 0 0 3% 0;
  padding: 1% 0;
  width: 100%;
}

/*Resizing delete, up vote, & down vote buttons*/
img {
  height: 20px;
  width: 20px;
}

.idea-list {
  align-items: center;
  display: flex;
  flex-direction: column;
}

.unique-id-style {
  position: relative;
  width: 70%;
}

h2 {
  color: #6D6E71 ;
  font-family: "Roboto Slab", serif;
  font-size: 1.5rem;
}

h3 {
  display: inline-block;
  font-family: "Roboto Slab", serif;
  font-size: 1rem;
  font-weight: 700;
  position: absolute;
  color: #6D6E71;
}

.delete-button {
  background: url("images/delete.svg");
  position: absolute;
  right: .55rem;
  top: 0.35rem;
  height: 25px;
  width: 25px;
}

.delete-button:hover {
  background: url("images/delete-hover.svg");
}

.idea-details {
  color: #939598 ;
  font-size: 1.2rem;
  padding: 1rem 0 1rem 0;
  text-align: justify;
  word-wrap: break-word;
}

.upvote-button {
  background: url("images/upvote.svg");
  margin: 0 2% 0 0;
  height: 25px;
  width: 25px;

} 
.downvote-button {
  background: url("images/downvote.svg");
  margin: 0 2% 0 0;
  height: 25px;
  width: 25px;
}

.upvote-button:hover {
  background: url("images/upvote-hover.svg") no-repeat;
}

.downvote-button:hover {
  background: url("images/downvote-hover.svg") no-repeat;
}

.quality-value {
  left: 25%;
  font-family: "Open Sans", serif;
  font-weight: 400;
}

hr {
  background-color: #D1D3D4 ;
  border: none;
  height: 1px;
  margin: 1rem 0 1rem 0;
}

@media only screen
  and (min-device-width: 375px)
  and (max-device-width: 667px)
  and (-webkit-min-device-pixel-ratio: 2) {

 .banner {
    height: 252px;
    width: 100%;
  }

 .search,
  .idea-list {
    height: 71%;
    width: 85%;
  }

 .unique-id-style {
    margin-right: -8.5rem;
    width: 75%;
  }

 h1 {
    font-size: 30px;
    margin: 10px auto 10px auto;
    width: 50%;
  }

 .idea-title {
    margin: 0 0 6% 11%;
    padding: .4% 2.6%;
    width: 85%;
  }

 .idea-content {
    height: 76px;
    margin: 0 0 6% 11%;
    padding: .4% 2.6%;
    width: 85%;
  }

 .save-button {
    width: 91%;
    margin: 0 0 6% 11%;
  }

 .search-bar {
    width: 73%;
  }
}

